# dbt_fundamentals

02_analytics_development_lifecyle/: analytics_development_lifecycle.md
course_materials/03_set_up_dbt/: set_up_dbt.md
dbt_fundamentals/: pyproject.toml
