[project]
name = "dbt-fundamentals"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Gonzales",email = "christopher.anthony.gonzales@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "dbt_fundamentals", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
